--- a/src/components/PlayerName/PlayerName.module.css
+++ b/src/components/PlayerName/PlayerName.module.css
@@ -1,4 +1,15 @@
 
+.PlayerName h1{
+    font-size: 3rem;
+    font-weight: 500;
+    cursor: pointer;
+    margin-bottom: 10px;
+    transition: text-shadow 0.3s ease;
+}
+
+.PlayerName h1:hover{
+    text-shadow: 10px 10px 10px hsla(178, 77%, 7%, 1);
+}
 
 .nameInput{
     display: flex;
